# snyk-depxtractor

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  release.yaml
snyk_depxtractor/: SnykClient.py  SnykConstants.py  __init__.py  cli.py  core.py
