[tool.poetry]
name = "snyk_depxtractor"
version = "0.1.0"
description = "Snyk Dependency Extractor"
license = "GPL-3.0-only"
authors = ["Zsolt Halo <net.zsolt.net@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/zsolt-halo/snyk-depxtractor"
repository = "https://github.com/zsolt-halo/snyk-depxtractor"
# documentation = "https://zsolt-halo.github.io/snyk-dependency-extractor/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]
include = [
    "docs",
    "tests",
    "*.md",
    "LICENSE",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/zsolt-halo/snyk-depxtractor/issues"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
tqdm = "^4.62.3"
pandas = "^1.3.5"
pyarrow = "^6.0.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^3.9.1"
isort = "^5.8.0"
pip-tools = "^6.1.0"
pre-commit = "^2.12.1"
pylint = "^2.8.2"
mypy = "^0.931"

[tool.poetry.scripts]
sde = "snyk_depxtractor.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
